# pool-odds

./: Anchor.toml  CRITICAL_ISSUES_ANALYSIS.md  Makefile  README.md  next.config.mjs  package.json  prediction-market-architecture.md  tailwind.config-poolodds.ts  tailwind.config.ts
app/: clientLayout-poolodds.tsx  clientLayout.tsx  globals-poolodds.css  globals.css  layout-poolodds.tsx  layout.tsx  page-fixed.tsx  page-poolodds.tsx  page.tsx
components/: error-boundary.tsx  liquidity-interface.tsx  market-card-fixed.tsx  market-card.tsx  market-grid-fixed.tsx  market-grid.tsx  market-stats-poolodds.tsx  market-stats.tsx  navbar.tsx  odds-chart.tsx  trading-interface.tsx  user-dashboard.tsx  wallet-button.tsx  wallet-provider.tsx  wallet-warnings-suppressor.tsx
hooks/: use-market-odds-fixed.ts  use-market-odds.ts  use-markets.ts
lib/: database-service-fixed.ts  database-service-meteora.ts  database-service-relationship-fix.ts  database-service.ts  dlmm-fixed.ts  dlmm-meteora-final.ts  dlmm-meteora-integration.ts  dlmm-real-fixed.ts  dlmm-real.ts  dlmm.ts  error-handling.ts  meteora-dlmm-sdk.ts  pyth-oracle.ts  solana-connection.ts  supabase-fixed.ts  supabase.ts  transaction-service.ts  validation.ts
programs/pool-odds/: Cargo.toml
programs/pool-odds/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/pool-odds/src/instructions/: create_market.rs  create_pools.rs  initialize.rs  mod.rs  resolve_market.rs  trade.rs
programs/pool-odds/src/state/: global_state.rs  market.rs  mod.rs  pool.rs  position.rs  user.rs
scripts/: 001-initial-schema.sql  (+7 more)
(+10 files in other folders)
